--- a/k8s/extras/elasticstack/apm-server-values.yaml
+++ b/k8s/extras/elasticstack/apm-server-values.yaml
@@ -4,10 +4,13 @@ service:
   enabled: true
 ingress:
   enabled: true
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    certmanager.k8s.io/issuer: "apm-server-prod"
   hosts:
     - apmserver.formuladb.io
   tls:
-    - secretName: formuladb-online
+    - secretName: certificate-apm-server-prod
       hosts:
         - apmserver.formuladb.io
 config:
