--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
         "morgan": "^1.6.1",
         "node-fetch": "^2.6.0",
         "nodemon": "^1.19.1",
+        "oauth": "^0.9.15",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
         "pg": "^7.8.0",
