--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
         "_skaffold_": "KUBECONFIG=k8s/production-kube-config.conf skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true",
         "skaffold": "skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true",
         "sass:watch": "sass --style compressed --watch fe/src/frmdb-editor/frmdb-editor.directive.scss:formuladb/frmdb-editor.min.css",
-        "live-server-git-sync": ,
-        "live-server": "concurrently -k \"\" \"bash serve.sh\" ",
-        "serve": "bash ci/prepare-env.sh && bash scripts/prepare-env.sh && tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window 'bash serve.sh' ';' select-layout tiled ';' split-window -h 'npm run skaffold' ';' select-layout tiled",
+        "live-server": "concurrently -k \"cd formuladb-env; while true; do sleep 5; git pull; done\" \"bash serve.sh\" ",
+        "serve": "bash ci/prepare-env.sh && bash scripts/prepare-env.sh && tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window 'npm run live-server' ';' select-layout tiled ';' split-window -h 'npm run skaffold' ';' select-layout tiled",
         "test": "node jasmine.js",
         "webdriver-update": "webdriver-manager update",
         "test:e2e": "protractor e2e/protractor.conf.js",
@@ -38,6 +37,7 @@
         "@types/js-yaml": "^3.12.1",
         "@types/lodash": "^4.14.135",
         "@types/node": "^12.7.1",
+        "bootstrap": "^4.4.1",
         "browser-sync": "^2.26.7",
         "concurrently": "^4.1.0",
         "custom-elements-module": "^1.0.0",
