--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "FormulaDB low code platform",
     "scripts": {
         "start": "bash scripts/init-be.sh && node --inspect=0.0.0.0:9231 dist-be/frmdb-be.js",
-        "start_dev": "nodemon --watch /dist-be --inspect=0.0.0.0:9231 dist-be/frmdb-be.js",
+        "start_dev": "bash scripts/init-be.sh && nodemon --watch /dist-be --inspect=0.0.0.0:9231 dist-be/frmdb-be.js",
         "compile": "tsc --sourceMap -p .",
         "compile:watch": "npm run compile -- -w",
         "bundle": "webpack",
@@ -16,7 +16,7 @@
         "skaffold": "skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true",
         "sass:watch": "sass --style compressed --watch fe/src/frmdb-editor/frmdb-editor.directive.scss:formuladb/frmdb-editor.min.css",
         "live-server": "concurrently -k \"cd formuladb-env; while true; do sleep 5; git pull; done\" \"bash serve.sh\" ",
-        "serve": "bash ci/prepare-env.sh && bash scripts/prepare-env.sh && tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window 'npm run live-server' ';' select-layout tiled ';' split-window -h 'npm run skaffold' ';' select-layout tiled",
+        "serve": "bash ci/prepare-env.sh && tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window 'npm run live-server' ';' select-layout tiled ';' split-window -h 'npm run skaffold' ';' select-layout tiled",
         "test": "node jasmine.js",
         "webdriver-update": "webdriver-manager update",
         "test:e2e": "protractor e2e/protractor.conf.js",
