--- a/k8s/overlays/development/kustomization.yaml
+++ b/k8s/overlays/development/kustomization.yaml
@@ -7,3 +7,4 @@ resources:
 - resources/ingress.yaml
 - resources/nginx-deployment.yaml
 - resources/nginx-service.yaml
+- resources/staging-issuer.yaml
