--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "dependencies": {
         "@google-cloud/storage": "^3.2.1",
         "@google-cloud/translate": "^4.1.3",
+        "@types/jasmine": "^3.4.6",
         "acorn": "^5.4.1",
         "ag-grid-community": "^21.2.2",
         "ag-grid-enterprise": "^21.2.2",
