--- a/k8s/overlays/development/kustomization.yaml
+++ b/k8s/overlays/development/kustomization.yaml
@@ -5,5 +5,5 @@ patches:
 - patches/pg-backup-deployment.yaml
 resources:
 - resources/ingress.yaml
-- resources/nginx-deployment.yaml
-- resources/nginx-service.yaml
+# - resources/nginx-deployment.yaml
+# - resources/nginx-service.yaml
