--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
         "_skaffold_": "KUBECONFIG=k8s/production-kube-config.conf skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true",
         "skaffold": "skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true",
         "sass:watch": "sass --style compressed --watch fe/src/frmdb-editor/frmdb-editor.directive.scss:formuladb/frmdb-editor.min.css",
-        "live-server": "concurrently -k \"cd formuladb-env; while true; do sleep 5; git pull; done\" \"bash serve.sh\" ",
+        "live-server": "concurrently -k \"cd formuladb-env; while true; do sleep 5; echo git pull; done\" \"bash serve.sh\" ",
         "serve": "bash ci/prepare-env.sh && tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window 'npm run live-server' ';' select-layout tiled ';' split-window -h 'npm run skaffold' ';' select-layout tiled",
         "test": "node jasmine.js",
         "webdriver-update": "webdriver-manager update",
-        "test:e2e": "protractor e2e/protractor.conf.js",
-        "_old_e2e:data": "FRMDB_STORAGE=postgres node tsc-out/test/src/load_test_data.js",
         "dev:be": "ts-node-dev --respawn --transpileOnly ./be/src/server.ts",
         "generate-json-schemas": "for i in App Entity SchemaEntityList; do typescript-json-schema ./tsconfig.json $i > core/src/schemas/$i.schema.json ; done",
         "sync-dev-static-assets": "watch 'bash ci/copy-static-assets-to-dev-ngunx-pod.sh' formuladb-env/static formuladb-themes"
@@ -58,7 +56,6 @@
         "node-sass": "^4.12.0",
         "npm": "^6.9.0",
         "parallel-webpack": "^2.3.0",
-        "protractor": "^5.4.2",
         "raw-loader": "^3.0.0",
         "rimraf": "^2.6.3",
         "sass": "^1.20.1",
@@ -71,11 +68,11 @@
         "ts-node": "^8.2.0",
         "ts-node-dev": "^1.0.0-pre.41",
         "tsconfig-paths": "^3.8.0",
-        "typescript": "3.6.3",
+        "typescript": "3.7.3",
         "typescript-json-schema": "^0.40.0",
         "watch": "^1.0.2",
-        "webpack": "^4.33.0",
-        "webpack-cli": "^3.3.2",
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.10",
         "webpack-node-externals": "^1.7.2",
         "whatwg-fetch": "^3.0.0"
     },
@@ -85,8 +82,8 @@
         "@types/jasmine": "^3.4.6",
         "acorn": "^5.4.1",
         "jsdom": "^15.1.1",
-        "ag-grid-community": "^21.2.2",
-        "ag-grid-enterprise": "^21.2.2",
+        "ag-grid-community": "^22.1.0",
+        "ag-grid-enterprise": "^22.1.0",
         "body-parser": "~1.13.2",
         "chromedriver": "^76.0.0",
         "cluster-key-slot": "^1.0.12",
