--- a/k8s/overlays/development/resources/ingress.yaml
+++ b/k8s/overlays/development/resources/ingress.yaml
@@ -3,10 +3,10 @@ kind: Ingress
 metadata:
   name: formuladb
   annotations:
-    traefik.ingress.kubernetes.io/redirect-entry-point: https
-    traefik.ingress.kubernetes.io/redirect-permanent: "true"
+    # traefik.ingress.kubernetes.io/redirect-entry-point: https
+    # traefik.ingress.kubernetes.io/redirect-permanent: "true"
     kubernetes.io/ingress.class: nginx
-    certmanager.k8s.io/issuer: "formuladb-staging"
+    # certmanager.k8s.io/issuer: "formuladb-staging"
 spec:
   tls:
   - hosts:
