--- a/k8s/overlays/development/resources/ingress.yaml
+++ b/k8s/overlays/development/resources/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
     # traefik.ingress.kubernetes.io/redirect-entry-point: https
     # traefik.ingress.kubernetes.io/redirect-permanent: "true"
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
     # certmanager.k8s.io/issuer: "formuladb-staging"
 spec:
   # tls:
