--- a/k8s/overlays/development/resources/ingress.yaml
+++ b/k8s/overlays/development/resources/ingress.yaml
@@ -6,7 +6,6 @@ metadata:
     # traefik.ingress.kubernetes.io/redirect-entry-point: https
     # traefik.ingress.kubernetes.io/redirect-permanent: "true"
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
     # certmanager.k8s.io/issuer: "formuladb-staging"
 spec:
   # tls:
@@ -21,3 +20,14 @@ spec:
         backend:
           serviceName: be
           servicePort: 8084
+---
+apiVersion: v1
+data:
+  ssl-redirect: "false"
+kind: ConfigMap
+metadata:
+  name: nginx-configuration
+  namespace: $(NAMESPACE_NAME)
+  labels:
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/part-of: ingress-nginx
