--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -13,6 +13,9 @@ build:
       - src: 'formuladb/**/*'
         dest: /wwwroot/formuladb
         strip: formuladb
+      - src: 'formuladb-env/**/*'
+        dest: /formuladb-env
+        strip: formuladb-env
       - src: skaffold.yaml
         dest: /
       - src: 'k8s/**/*'
