scale elastic cluster/ update heap and memory to a production setup.

--- a/k8s/extras/elasticstack/elasticsearch-data-values.yaml
+++ b/k8s/extras/elasticstack/elasticsearch-data-values.yaml
@@ -28,3 +28,12 @@ volumeClaimTemplate:
   resources:
     requests:
       storage: 100Gi
+
+replicas: 18
+esJavaOpts: "-Xmx8g -Xms8g"
+
+resources:
+  requests:
+    memory: "8Gi"
+  limits:
+    memory: "16Gi"
