--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "skaffold": "skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true --auto-deploy=false",
         "sass:watch": "sass --style compressed --watch fe/src/frmdb-editor/frmdb-editor.directive.scss:formuladb/frmdb-editor.min.css",
         "live-server": "concurrently -k \"cd formuladb-env; while true; do sleep 5; git pull; done\" \"bash serve.sh\" ",
-        "serve": "bash ci/prepare-env.sh && tmux new-session 'npm run compile:watch' ';' split-window -h 'npm run bundle:watch' ';' split-window 'npm run live-server' ';' select-layout tiled ';' split-window -h 'npm run skaffold' ';' select-layout tiled",
+        "serve": "bash ci/prepare-env.sh && tmux new-session 'npm run compile:watch' ';' split-window -h 'sleep 8; npm run bundle:watch' ';' split-window 'sleep 22; npm run live-server' ';' select-layout tiled ';' split-window -h 'sleep 15; npm run skaffold' ';' select-layout tiled",
         "test": "node jasmine.js",
         "webdriver-update": "webdriver-manager update",
         "dev:be": "ts-node-dev --respawn --transpileOnly ./be/src/server.ts",
