--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
         "_skaffold_": "KUBECONFIG=k8s/production-kube-config.conf skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true",
         "skaffold": "skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true",
         "sass:watch": "sass --style compressed --watch fe/src/frmdb-editor/frmdb-editor.directive.scss:formuladb/frmdb-editor.min.css",
-        "rsync:watch": "while true; do sleep 3; bash ci/kubectlrsync.sh -auv --exclude=.git be:/wwwroot/git/formuladb-env/ formuladb-env/ | egrep -v 'be:/wwwroot/git/formuladb-env/|skipping directory [.]'; done",
-        "xx-live-server": "concurrently -k \"npm run rsync:watch\" \"bash serve.sh\" ",
-        "live-server": "bash serve.sh",
+        "rsync:watch": "while true; do sleep 3; bash rsync.sh; done",
+        "live-server": "concurrently -k \"npm run rsync:watch\" \"bash serve.sh\" ",
         "serve": "bash ci/prepare-env.sh && tmux new-session 'npm run compile:watch' ';' split-window -h 'sleep 8; npm run bundle:watch' ';' split-window 'sleep 22; npm run live-server' ';' select-layout tiled ';' split-window -h 'sleep 15; npm run skaffold' ';' select-layout tiled",
         "test": "node jasmine.js",
         "webdriver-update": "webdriver-manager update",
@@ -80,7 +79,7 @@
     },
     "dependencies": {
         "@google-cloud/storage": "^3.2.1",
-        "@google-cloud/translate": "^4.1.3",
+        "@google-cloud/translate": "^5.1.4",
         "@types/jasmine": "^3.4.6",
         "acorn": "^5.4.1",
         "jsdom": "^15.1.1",
