--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "start": "bash scripts/init-be.sh && node --inspect=0.0.0.0:9231 dist-be/frmdb-be.js",
         "start_dev": "bash scripts/init-be.sh && nodemon --watch /dist-be --inspect=0.0.0.0:9231 dist-be/frmdb-be.js",
+        "precompile": "patch --merge node_modules/protractor/built/index.d.ts  e2e/protractor.patch",
         "compile": "tsc --sourceMap -p .",
         "watch-compile": "npm run compile -- -w",
         "bundle": "webpack",
@@ -23,6 +24,7 @@
         "serve-tmux": "bash ci/prepare-env.sh && tmux new-session 'npm run watch-compile' ';' split-window -h 'sleep 8; npm run bundle:watch' ';' split-window 'sleep 22; npm run live-server' ';' select-layout tiled ';' split-window -h 'sleep 15; npm run watch-skaffold' ';' select-layout tiled",
         "serve": "concurrently -k \"npm:watch-*\" ",
         "test": "node jasmine.js",
+        "e2e": "protractor e2e/protractor.conf.js",
         "webdriver-update": "webdriver-manager update",
         "dev:be": "ts-node-dev --respawn --transpileOnly ./be/src/server.ts",
         "generate-json-schemas": "for i in App Entity SchemaEntityList; do typescript-json-schema ./tsconfig.json $i > core/src/schemas/$i.schema.json ; done",
@@ -62,7 +64,7 @@
         "node-sass": "^4.13.0",
         "npm": "^6.13.6",
         "parallel-webpack": "^2.4.0",
-        "protractor": "^5.4.2",
+        "protractor": "5.4.2",
         "raw-loader": "^4.0.0",
         "rimraf": "^3.0.0",
         "sass": "^1.24.4",
