--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start_dev": "bash scripts/init-be.sh && nodemon --watch /dist-be --inspect=0.0.0.0:9231 dist-be/frmdb-be.js",
         "precompile": "patch --merge node_modules/protractor/built/index.d.ts  e2e/protractor.patch",
         "compile": "tsc --sourceMap -p .",
-        "watch-compile": "npm run compile -- -w",
+        "watch-compile": "npm run compile -- -w --preserveWatchOutput",
         "bundle": "webpack",
         "bundle:watch": "concurrently -k \"webpack --watch --progress --mode development\" \"npm run watch-sass\" ",
         "watch-bundle": "sleep 20; parallel-webpack --watch --mode development",
@@ -22,7 +22,7 @@
         "live-server": "concurrently -k \"npm run watch-rsync\" \"bash serve.sh\" ",
         "watch-live-server": "bash serve.sh",
         "serve-tmux": "bash ci/prepare-env.sh && tmux new-session 'npm run watch-compile' ';' split-window -h 'sleep 8; npm run bundle:watch' ';' split-window 'sleep 22; npm run live-server' ';' select-layout tiled ';' split-window -h 'sleep 15; npm run watch-skaffold' ';' select-layout tiled",
-        "serve": "concurrently -k \"npm:watch-*\" ",
+        "serve": "bash ci/prepare-env.sh && concurrently -k \"npm:watch-*\" ",
         "test": "node jasmine.js",
         "e2e": "protractor e2e/protractor.conf.js",
         "webdriver-update": "webdriver-manager update",
