--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "watch-compile": "npm run compile -- -w --preserveWatchOutput",
         "bundle": "webpack",
         "bundle:watch": "concurrently -k \"webpack --watch --progress --mode development\" \"npm run watch-sass\" ",
-        "watch-bundle": "sleep 20; parallel-webpack --watch --mode development",
+        "watch-bundle": "sleep 20; webpack --watch --mode development",
         "docker:be": "docker build -t formuladb-be -f Dockerfile.be . && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:${npm_package_version} && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:latest",
         "docker:fe": "docker build -t formuladb-maps -f Dockerfile.fe . && docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:${npm_package_version}",
         "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
