--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "formuladb",
         "frmdbchange",
         "jsep",
+        "notif",
         "objs",
         "rowid",
         "startkey"
