fixes for staging env

--- a/k8s/overlays/staging/patches/be-deployment.yaml
+++ b/k8s/overlays/staging/patches/be-deployment.yaml
@@ -12,3 +12,5 @@ spec:
           value: staging
         - name: FRMDB_IS_PROD_ENV
           value: "true"
+        - name: FRMDB_AUTH_ENABLED
+          value: "false"
