--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "watch-sass": "sass --style compressed --watch fe/src/frmdb-editor/frmdb-editor.directive.scss:formuladb/frmdb-editor.min.css",
         "watch-rsync": "sleep 45; while true; do sleep 3; bash rsync.sh 2>/dev/null; done",
         "live-server": "concurrently -k \"npm run watch-rsync\" \"bash serve.sh\" ",
-        "watch-live-server": "bash serve.sh",
+        "-rem-watch-live-server": "bash serve.sh",
         "serve-tmux": "bash ci/prepare-env.sh && tmux new-session 'npm run watch-compile' ';' split-window -h 'sleep 8; npm run bundle:watch' ';' split-window 'sleep 22; npm run live-server' ';' select-layout tiled ';' split-window -h 'sleep 15; npm run watch-skaffold' ';' select-layout tiled",
         "serve": "bash ci/prepare-env.sh && concurrently -k \"npm:watch-*\" ",
         "test": "node jasmine.js",
@@ -90,9 +90,10 @@
         "@google-cloud/translate": "^5.1.4",
         "@types/jasmine": "^3.4.6",
         "acorn": "^7.1.0",
-        "jsdom": "^16.0.0",
         "ag-grid-community": "^22.1.1",
         "ag-grid-enterprise": "^22.1.1",
+        "animate.css": "^3.7.2",
+        "aos": "^3.0.0-beta.6",
         "body-parser": "~1.19.0",
         "chromedriver": "^79.0.0",
         "cluster-key-slot": "^1.1.0",
@@ -114,9 +115,11 @@
         "formulajs": "git+https://github.com/acristu/formula.js.git",
         "fuse.js": "^3.4.6",
         "hot-debug": "^1.0.0",
+        "hover.css": "^2.3.2",
         "http-proxy-middleware": "^0.20.0",
         "js-beautify": "^1.10.2",
         "js-yaml": "^3.13.1",
+        "jsdom": "^16.0.0",
         "jsep": "git+https://github.com/acristu/jsep.git",
         "lodash": "^4.17.15",
         "md5": "^2.2.1",
