--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,7 +55,8 @@
             "name": "FE serve",
             "type": "chrome",
             "request": "launch",
-            "url": "http://localhost:8081/formuladb/editor.html#/frmdb-platform-apps/formuladb_io/index.html",
+            "_url": "http://localhost:8084/formuladb/editor.html#/frmdb-platform-apps/formuladb_io/index.html",
+            "url": "http://frmdb.localhost/formuladb/editor.html#/apps/Hotel_Booking/index.html",
             "webRoot": "${workspaceFolder}",
             "pathMapping": {
                 "/formuladb-editor": "${workspaceFolder}/formuladb-editor"
