--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,35 +5,44 @@
     "_runner": "terminal",
     "tasks": [
         {
-            "label": "serve:maps",
-            "command": "npm run serve:maps",
-            "type": "shell",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "dependsOn":["docker:watch"]
-        },
-        {
-            "label": "docker:watch",
-            "command": "npm run docker:watch",
+            "label": "watch-compile",
+            "command": "npm run watch-compile",
             "type": "shell",
             "group": "build",
-            "dependsOn":["bundle:watch"]
+            "problemMatcher": "$tsc-watch",
+            "isBackground": true
         },
         {
-            "label": "bundle:watch",
-            "command": "npm run bundle:watch",
+            "label": "watch-bundle",
+            "command": "npm run watch-bundle",
             "type": "shell",
             "group": "build",
-            "dependsOn":["compile:watch"]
-        },
-        {
-            "label": "compile:watch",
-            "command": "npm run compile:watch",
-            "type": "shell",
-            "group": "build",
-            "problemMatcher": "$tsc",
+            "dependsOn": [
+                "watch-compile"
+            ],
+            "isBackground": true,
+            "problemMatcher": {
+                "owner": "webpack",
+                "severity": "error",
+                "fileLocation": "absolute",
+                "pattern": [
+                    {
+                        "regexp": "ERROR in [^ ]* (.*):(.*):(.*)",
+                        "file": 1,
+                        "line": 2,
+                        "column": 3
+                    },
+                    {
+                        "regexp": ".*",
+                        "message": 0
+                    }
+                ],
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": "is watching files",
+                    "endsPattern": "^\\s*\\d{1,2}:\\d{1,2}:\\d{1,2}(?: AM| PM)? - Compilation complete\\. Watching for file changes\\."
+                }
+            }
         },
         {
             "label": "BE serve",
