--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
         "compile": "tsc --sourceMap -p .",
         "watch-compile": "npm run compile -- -w --preserveWatchOutput",
         "bundle": "webpack",
-        "bundle:watch": "concurrently -k \"webpack --watch --progress --mode development\" \"npm run watch-sass\" ",
-        "watch-bundle": "sleep 20; webpack --watch --mode development",
+        "bundle:watch": "concurrently -k \"webpack --watch --mode development\" \"npm run watch-sass\" ",
+        "watch-bundle": "webpack --watch --mode development",
         "docker:be": "docker build -t formuladb-be -f Dockerfile.be . && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:${npm_package_version} && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:latest",
         "docker:fe": "docker build -t formuladb-maps -f Dockerfile.fe . && docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:${npm_package_version}",
         "docker:maps": "docker build -t formuladb-maps -f Dockerfile.maps . && docker tag formuladb-maps registry.gitlab.com/metawiz/febe/formuladb-maps:${npm_package_version}",
         "_skaffold_": "KUBECONFIG=k8s/production-kube-config.conf skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true",
         "skaffold": "skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true",
-        "watch-skaffold": "sleep 35; npm run skaffold",
-        "watch-sass": "sass --style compressed --watch fe/src/frmdb-editor/frmdb-editor.directive.scss:formuladb/frmdb-editor.min.css",
-        "watch-rsync": "sleep 45; while true; do sleep 3; bash rsync.sh 2>/dev/null; done",
+        "watch-skaffold": "npm run skaffold",
+        "watch-sass": "sleep 10; sass --style compressed --watch fe/src/frmdb-editor/frmdb-editor.directive.scss:formuladb/frmdb-editor.min.css",
+        "watch-rsync": "sleep 15; while true; do sleep 3; bash rsync.sh 2>/dev/null; done",
         "live-server": "concurrently -k \"npm run watch-rsync\" \"bash serve.sh\" ",
         "-rem-watch-live-server": "bash serve.sh",
-        "serve-tmux": "bash ci/prepare-env.sh && tmux new-session 'npm run watch-compile' ';' split-window -h 'sleep 8; npm run bundle:watch' ';' split-window 'sleep 22; npm run live-server' ';' select-layout tiled ';' split-window -h 'sleep 15; npm run watch-skaffold' ';' select-layout tiled",
-        "serve": "bash ci/prepare-env.sh && concurrently -k \"npm:watch-*\" ",
+        "serve": "bash ci/prepare-dev.sh && tmux new-session 'npm run watch-compile' ';' split-window -h 'npm run bundle:watch' ';' split-window 'npm run watch-rsync' ';' select-layout tiled ';' split-window -h 'npm run watch-skaffold' ';' select-layout tiled",
+        "serve-no-tmux": "bash ci/prepare-env.sh && concurrently -k \"npm:watch-*\" ",
         "test": "node jasmine.js",
         "e2e": "protractor e2e/protractor.conf.js",
         "webdriver-update": "webdriver-manager update",
