--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
         "watch-rsync": "sleep 15; while true; do sleep 3; bash rsync.sh 2>/dev/null; done",
         "live-server": "concurrently -k \"npm run watch-rsync\" \"bash serve.sh\" ",
         "-rem-watch-live-server": "bash serve.sh",
-        "serve": "bash ci/prepare-dev.sh && tmux new-session 'npm run watch-compile' ';' split-window -h 'npm run bundle:watch' ';' split-window 'npm run watch-rsync' ';' select-layout tiled ';' split-window -h 'npm run watch-skaffold' ';' select-layout tiled",
-        "serve-no-tmux": "bash ci/prepare-env.sh && concurrently -k \"npm:watch-*\" ",
+        "serve-tmux": "bash ci/prepare-dev.sh && tmux new-session 'npm run watch-compile' ';' split-window -h 'npm run bundle:watch' ';' split-window 'npm run watch-rsync' ';' select-layout tiled ';' split-window -h 'npm run watch-skaffold' ';' select-layout tiled",
+        "serve": "bash ci/prepare-dev.sh && concurrently -k \"npm:watch-*\" ",
         "test": "node jasmine.js",
         "e2e": "protractor e2e/protractor.conf.js",
         "webdriver-update": "webdriver-manager update",
         "dev:be": "ts-node-dev --respawn --transpileOnly ./be/src/server.ts",
+        "generate-icons": "icon-font-generator -p frmdb-i formuladb-env/icons/formuladb/svg/*.svg -o formuladb-env/icons/formuladb",
+        "generate-user-icons": "icon-font-generator -p frmdb-i /wwwroot/git/formuladb-env/icons/formuladb/svg/*.svg -o /wwwroot/git/formuladb-env/icons/formuladb",
         "generate-json-schemas": "for i in App Entity SchemaEntityList; do typescript-json-schema ./tsconfig.json $i > core/src/schemas/$i.schema.json ; done",
+        "generate-theme-css": "cd themes; bash ci/build.sh --compile",
         "sync-dev-static-assets": "watch 'bash ci/copy-static-assets-to-dev-ngunx-pod.sh' formuladb-env/static formuladb-themes"
     },
     "author": "",
@@ -117,6 +120,7 @@
         "hot-debug": "^1.0.0",
         "hover.css": "^2.3.2",
         "http-proxy-middleware": "^0.20.0",
+        "icon-font-generator": "^2.1.10",
         "js-beautify": "^1.10.2",
         "js-yaml": "^3.13.1",
         "jsdom": "^16.0.0",
@@ -139,6 +143,7 @@
         "serve-favicon": "~2.5.0",
         "serve-index": "^1.9.1",
         "short-uuid": "^3.1.1",
+        "shutterstock-api": "^1.0.18",
         "source-map-support": "^0.5.16",
         "tslib": "^1.10.0",
         "wait-on": "^3.3.0"
