removed certmanager from dev env

--- a/k8s/overlays/ci/kustomization.yaml
+++ b/k8s/overlays/ci/kustomization.yaml
@@ -1,10 +1,7 @@
 bases:
-- ../../base
+- ../live
 patches:
 - patches/be-deployment.yaml
 - patches/pg-backup-deployment.yaml
 resources:
 - resources/ingress.yaml
-# - resources/nginx-deployment.yaml
-# - resources/nginx-service.yaml
-# - resources/staging-issuer.yaml
