--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,6 @@ static/**/*.svg filter=lfs diff=lfs merge=lfs -text
 **/*.woff filter=lfs diff=lfs merge=lfs -text
 **/*.woff2 filter=lfs diff=lfs merge=lfs -text
 **/*.otf filter=lfs diff=lfs merge=lfs -text
+icons/**/*.svg filter=lfs diff=lfs merge=lfs -text
+css/**.css filter=lfs diff=lfs merge=lfs -text
+**/*.svg filter=lfs diff=lfs merge=lfs -text
