--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
         "e2e": "protractor e2e/protractor.conf.js",
         "webdriver-update": "webdriver-manager update",
         "dev:be": "ts-node-dev --respawn --transpileOnly ./be/src/server.ts",
-        "generate-icons": "icon-font-generator -p frmdb-i formuladb-env/icons/formuladb/svg/*.svg -o formuladb-env/icons/formuladb",
-        "generate-user-icons": "icon-font-generator -p frmdb-i /wwwroot/git/formuladb-env/icons/formuladb/svg/*.svg -o /wwwroot/git/formuladb-env/icons/formuladb",
+        "preprocess-icons": "svgo -f formuladb/icons/svg -o formuladb/icons/svgo --disable=removeViewBox --enable=removeDimensions --config '{\"plugins\": [{\"convertPathData\": {\"noSpaceAfterFlags\": false}}, {\"mergePaths\": {\"noSpaceAfterFlags\": false}}]}'",
+        "generate-icons": "icon-font-generator -p frmdb-i formuladb/icons/svgo/*.svg -o formuladb/icons -n frmdb-icons",
+        "preprocess-user-icons": "svgo -f formuladb-env/icons/formuladb/svg -o formuladb-env/icons/formuladb/svgo --disable=removeViewBox --enable=removeDimensions --config '{\"plugins\": [{\"convertPathData\": {\"noSpaceAfterFlags\": false}}, {\"mergePaths\": {\"noSpaceAfterFlags\": false}}]}'",
+        "generate-user-icons": "icon-font-generator -p frmdb-i formuladb-env/icons/formuladb/svgo/*.svg -o formuladb-env/icons/formuladb -n fdb-i",
+        "preprocess-user-env-icons": "svgo -f /wwwroot/git/formuladb-env/icons/formuladb/svg -o /wwwroot/git/formuladb-env/icons/formuladb/svgo --disable=removeViewBox --enable=removeDimensions --config '{\"plugins\": [{\"convertPathData\": {\"noSpaceAfterFlags\": false}}, {\"mergePaths\": {\"noSpaceAfterFlags\": false}}]}'",
+        "generate-user-env-icons": "icon-font-generator -p frmdb-i /wwwroot/git/formuladb-env/icons/formuladb/svgo/*.svg -o /wwwroot/git/formuladb-env/icons/formuladb -n fdb-i",
         "generate-json-schemas": "for i in App Entity SchemaEntityList; do typescript-json-schema ./tsconfig.json $i > core/src/schemas/$i.schema.json ; done",
         "generate-theme-css": "cd themes; bash ci/build.sh --compile",
         "sync-dev-static-assets": "watch 'bash ci/copy-static-assets-to-dev-ngunx-pod.sh' formuladb-env/static formuladb-themes"
@@ -145,6 +149,7 @@
         "short-uuid": "^3.1.1",
         "shutterstock-api": "^1.0.18",
         "source-map-support": "^0.5.16",
+        "svgo": "^1.3.2",
         "tslib": "^1.10.0",
         "wait-on": "^3.3.0"
     },
