--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "strictNullChecks": true,
+        "resolveJsonModule": true,
         "target": "ES2018",
         "typeRoots": [
             "node_modules/@types"
